--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,5 +1,8 @@
 {
   "name": "@vwkd/gkv-premium-de",
   "version": "0.0.1",
-  "exports": "./src/main.ts"
+  "exports": "./src/main.ts",
+  "imports": {
+    "@std/assert": "jsr:@std/assert@^1.0.9"
+  }
 }
