--- a/deno.jsonc
+++ b/deno.jsonc
@@ -4,5 +4,10 @@
   "exports": "./src/main.ts",
   "imports": {
     "@std/assert": "jsr:@std/assert@^1.0.9"
+  },
+  "publish": {
+    "exclude": [
+      "**/*_test.ts"
+    ]
   }
 }
